<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.13" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/help_message" 
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13" >
            <EditText
                android:id="@+id/ipAdressText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/ip_message"
                tools:ignore="NestedWeights" />
            <EditText
                android:id="@+id/portText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/port_message" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.5" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:onClick="sendNet"
                android:text="@string/button_send_net" />
            
        </LinearLayout>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
	
	        <LinearLayout
	            android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5" 
		        android:orientation="vertical">
						
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="match_parent"
		            android:layout_height="64dp"
		            android:text="@string/help_message_format" 
		            android:textAppearance="?android:attr/textAppearanceSmall" 
					android:gravity="center" />
				        
		        <RadioGroup
		            android:id="@+id/radioBoxGroup"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.13" >
		            
		            <RadioButton
		                android:id="@+id/radioBoxMPEGTS"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/radio_box_mpegts" />
		            
		            <RadioButton
		                android:id="@+id/radioBoxMP4"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/radio_box_mp4" />
		            
		            <RadioButton
		                android:id="@+id/radioBox3GPP"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/radio_box_3gpp" />
		            
<!-- 	            <RadioButton -->
<!-- 	                android:id="@+id/radioBoxMATROSKA" -->
<!-- 	                android:layout_width="wrap_content" -->
<!-- 	                android:layout_height="wrap_content" -->
<!-- 	                android:text="@string/radio_box_matroska" /> -->
<!-- 	            <RadioButton -->
<!-- 	                android:id="@+id/radioBoxWEBM" -->
<!-- 	                android:layout_width="wrap_content" -->
<!-- 	                android:layout_height="wrap_content" -->
<!-- 	                android:text="@string/radio_box_webm" /> -->
				
					<RadioButton
					    android:id="@+id/radioBoxRTP"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/radio_box_rtp" />
				
				</RadioGroup> <!--  /Encapsulation Radio Boxes  -->

			</LinearLayout>
		
			<LinearLayout
	            android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:orientation="vertical"
	            >
		
		        <TextView
		            android:id="@+id/textViewCodexLabel"
		            android:layout_width="match_parent"
		            android:layout_height="64dp"
		            android:text="@string/help_message_codec" 
		            android:textAppearance="?android:attr/textAppearanceSmall" 
					android:gravity="center" />
	        <RadioGroup
	            android:id="@+id/radioCodecGroup"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.13" >
	            
	            <RadioButton
	                android:id="@+id/radioCodecH264"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/radio_codec_h264" />
	            
	            <RadioButton
	                android:id="@+id/radioCodecH263"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/radio_codec_h263" />
	            
	            <RadioButton
	                android:id="@+id/radioCodecMP4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/radio_codec_mp4" />
	            
	           </RadioGroup> <!--  /Encapsulation Radio Boxes  -->
	           
			</LinearLayout>			        
		</LinearLayout>
	</LinearLayout>
</LinearLayout>